syntax = "proto3";
package com.jesse.jnotes.proto;

option java_package = "com.jesse.jnotes.proto";
option java_multiple_files = true;

message ConfigData {
    string file_storage = 1;
    string file_storage_options = 2;
    repeated Note notes = 3;
    repeated NoteType notetypes = 4;
}

message Note {
    repeated string path = 1;
    string name = 2;
    string note_type = 3;
}

message NoteType {
    string name = 1;
    message Block {
        string name = 1;
        string block_type = 2;
    }
    repeated Block blocks = 2;
}